@@ -392,7 +392,7 @@
 
 		//if some languages can't be set, showing a warning about that
 		$lang_hint = $languages_unable_set > 0 ? _('You are not able to choose some of the languages, because locales for them are not installed on the web server.') : '';
-		
+
 		$lang_tbl = new CTable();
 		$c1 = new CCol($cmbLang);
 		$c1->addStyle('padding-left: 0;');
@@ -2691,9 +2691,6 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 					}
 				}
 
-				$tree = array();
-				//create_node_list($node, $tree);
-
 				$frmTrig->addVar('expression', $expression);
 				$exprfname = 'expr_temp';
 				$exprtxt = new CTextBox($exprfname, $expr_temp, 65, 'yes');
@@ -2703,7 +2700,6 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 			else{
 				show_messages(false, '', S_EXPRESSION_SYNTAX_ERROR);
 				$input_method = IM_ESTABLISHED;
-				//$input_method = IM_FORCED;
 			}
 		}
 
@@ -2713,11 +2709,17 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 			$exprparam = "getSelectedText(this.form.elements['$exprfname'])";
 		}
 
-		$row = array($exprtxt,
-			 new CButton('insert',$input_method == IM_TREE ? S_EDIT : S_ADD,
-						 "return PopUp('popup_trexpr.php?dstfrm=".$frmTrig->getName().
-						 "&dstfld1=${exprfname}&srctbl=expression".url_param('parent_discoveryid').
-						 "&srcfld1=expression&expression=' + escape($exprparam),1000,700);"));
+
+		$add_expr_button = new CButton('insert',$input_method == IM_TREE ? S_EDIT : S_ADD,
+										 "return PopUp('popup_trexpr.php?dstfrm=".$frmTrig->getName().
+										 "&dstfld1=${exprfname}&srctbl=expression".
+										 "&srcfld1=expression&expression=' + escape($exprparam),1000,700);");
+		if($limited=='yes'){
+			$add_expr_button->setAttribute('disabled', 'disabled');
+		}
+
+
+		$row = array($exprtxt, $add_expr_button);
 
 		if(isset($macrobtn)) array_push($row, $macrobtn);
 		if($input_method == IM_TREE){
@@ -2735,7 +2737,7 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 		$frmTrig->addVar('toggle_input_method', '');
 		$exprtitle = array(S_EXPRESSION);
 
-		if($input_method != IM_FORCED){
+		if($input_method != IM_FORCED && $limited != 'yes'){
 			$btn_im = new CSpan(S_TOGGLE_INPUT_METHOD,'link');
 			$btn_im->setAttribute('onclick','javascript: '.
 								"document.getElementById('toggle_input_method').value=1;".
@@ -2843,7 +2845,6 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 								'&reference=deptrigger'.
 								'&multiselect=1'.
 							"',1000,700);",'T');
-
 
 			$frmTrig->addRow(S_NEW_DEPENDENCY, $btnSelect, 'new');
 	// end new dependency
@@ -5012,6 +5013,10 @@ JAVASCRIPT;
 
 		insert_js('
 			function addMacroRow(){
+<<<<<<< .working
+=======
+
+>>>>>>> .merge-right.r15986
 				if(typeof(addMacroRow.macro_count) == "undefined"){
 					addMacroRow.macro_count = '.count($macros).';
 				}
